fix timesheet bg for readability

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -106,7 +106,7 @@
 }
 
 .timesheet-trains {
-  background: linear-gradient(var(--secondary-color) 0%, var(--primary-color) 100%);
+  background: linear-gradient(var(--secondary-color) 30%, var(--primary-color) 100%);
   height: 80vh;
 }
 
